--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <title>Walhall Sample App</title>
   <base href="/">
-
+  <script type="text/javascript" src="/environment.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/walhall.svg">
 </head>
