Revert to Tola way of loading environment variables at runtime

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Walhall Sample App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script type="text/javascript" src="assets/environment.js"></script>
   <link rel="icon" type="image/x-icon" href="assets/walhall.svg">
 </head>
 <body>
