--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript" src="assets/environment.js"></script>
-  <link rel="icon" type="image/x-icon" href="assets/midgard-logo.svg">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <app-root></app-root>
