--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <meta charset="utf-8">
-  <title>Walhall Sample App</title>
+  <title>Midgard App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript" src="assets/environment.js"></script>
